# zms-tradition

./: Cargo.toml  README.md
.cargo/: config.toml
zms-tradition-cal-types/: Cargo.toml
zms-tradition-cal-types/src/: cal_types.rs  calculation_error.rs  indicator_example.rs  lib.rs  macros_polars.rs  trend_algorithm.rs
zms-tradition-cal-types/src/trend_algorithm/: stiffness_trend.rs
zms-tradition-gw3data-server/: Cargo.toml
zms-tradition-gw3data-server/src/: lib.rs  main.rs  picker.rs  service_router.rs
zms-tradition-gw3data-server/src/picker/: grpc_status_handler.rs  query_service.rs
zms-tradition-picker-gbot/: Cargo.toml
zms-tradition-picker-gbot/src/: gw3data_client.rs  lib.rs  main.rs  picker_engine.rs  service_router.rs
zms-tradition-picker-gbot/src/gw3data_client/: cal_picker_symbols.rs  request_error.rs
zms-tradition-proto-grpc-types/: Cargo.toml  build.rs
zms-tradition-proto-grpc-types/src/: lib.rs
zms-tradition-proto-grpc-types/src/convert/: from_grpc_rest_response.rs  from_rest_grpc_request.rs
zms-tradition-proto-grpc-types/v1/: traditionw3data.proto
zms-tradition-rest-gateway-server/: Cargo.toml
zms-tradition-rest-gateway-server/src/: gw3data_client.rs  lib.rs  main.rs  service_router.rs  zms_gw3data_client.rs
zms-tradition-rest-gateway-server/src/zms_gw3data_client/: request_error.rs
zms-tradition-rest-types/: Cargo.toml
zms-tradition-rest-types/src/: lib.rs  rest_types.rs
