[workspace]
members = [ 
    # -- Libraries
    "zms-tradition-proto-grpc-types",
    "zms-tradition-rest-types",
    # -- Binaries
    "zms-tradition-rest-gateway-server",
    "zms-tradition-gw3data-server",
    "zms-tradition-picker-gbot",
]
default-members = [
    # -- Libraries
    "zms-tradition-proto-grpc-types",
    "zms-tradition-rest-types",
    # -- Binaries
    "zms-tradition-rest-gateway-server",
    "zms-tradition-gw3data-server",
    "zms-tradition-picker-gbot",
]
resolver = "2"
