[package]
name = "zms-tradition-gw3data-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
tracing = "0.1.40"
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["full"] }

# workspace member depdenencies
zms-tradition-rest-types = { path = "../zms-tradition-rest-types" }
# proto generated dependency here the zms-tradition-proto-grpc-types is still package
# name so with dashes
zms-tradition-proto-grpc-types = { path = "../zms-tradition-proto-grpc-types" }