[package]
name = "zms-tradition-proto-grpc-types"
version = "0.1.0"
edition = "2021"

[dependencies]
heck = "0.5.0"
prost = "0.13.3"
tonic = "0.12.3"
tracing = "0.1.40"

# workspace member depdenencies
zms-tradition-rest-types = { path = "../zms-tradition-rest-types" }

[build-dependencies]
tonic-build = "0.12.0"